# autoform-bot

./: .gitignore  .gitmodules  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  Makefile  QUICKSTART.md  README.md  SETUP.md  TODO.md  gemini-extension.json  package.json  plugin_insights.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
agents/: autoform-reader.md  autoform-reviewer.md  autoform-worker.md  code-quality-reviewer.md  content-reviewer.md  faithfulness-reviewer.md  proof-integrity-reviewer.md
autoform/: __init__.py
commands/: autoform-crew.toml  autoform-extract.toml  autoform-prove.toml  autoform-quality.toml  autoform-review.toml  autoform.toml  dispatch.md  setup.md  (+3 more)
lean-informal-planner/: SETUP.md  pyproject.toml
lean-informal-planner/.claude-plugin/: plugin.json
lean-informal-planner/agents/: gap-finder.md  graph-reviewer.md  holistic-reviewer.md  mathlib-checker.md  source-searcher.md  splitter.md
lean-informal-planner/docs/: design-v2.md  pipeline.md
lean-informal-planner/hooks/: hooks.json  session-start
lean-informal-planner/scripts/: check_invariants.py  check_toolchain.sh  export_blueprint.py  generate_graph.py  mathlib_search.py  merge_node.py
lean-informal-planner/servers/: run-mathlib-server.sh
lean-informal-planner/servers/mathlib/: core.py  server.py
lean-informal-planner/skills/plan/: SKILL.md
lean-informal-planner/skills/plan-view/: SKILL.md
lean-informal-planner/skills/plan/references/: plan-json-schema.md
lean-informal-planner/templates/: dep_graph.html
(+545 files in other folders)
