[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoform"
version = "0.1.0"
description = "Turn any AI coding assistant into a Lean 4 formalization agent"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.4",
]

[project.optional-dependencies]
repl = [
    "psutil>=5.9",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["servers"]

[tool.ruff]
line-length = 120
