[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lean-informal-planner"
version = "0.1.0"
description = "Plan Lean formalization efforts by mapping textbook concepts to Mathlib"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["servers"]

[tool.ruff]
line-length = 120
